- updated &invoke to accept the following named parameters:
  parameter => %() - accepts a hashmap of $scalars to send as named parameters
  environment => &closure - accepts a closure whose this scope is to be used
     in lieu of the closures normal environment.  
  message => "some string" - the message value to send to the called function

2.1-beta 7  (15 Oct 06)
===========
- index operator can now be applied to closures to reference the "this" scope
  of the closure i.e.

  $closure = lambda({ println("I am: " . $name); }, $name => "Burt");
  $closure['$name'] = "Joe";
  [$closure];

  Output: "I am Joe"
- added -isfunction predicate to check if a scalar contains a function or not
- added &invoke(&function, @args, [message]) to invoke a function with @args
  passed as individual arguments.
- updated &setField to accept key/value pair arguments where the key specifies
  the field to update and the argument the value, any number of args can be
  specified.  this breaks to behavor set in 2.1-b6
- added a -h/--help command line option (:
- specifying a - on the sleep command line reads the script from STDIN

2.1-beta 6  (1 Oct 06)
===========
- added named parameters for Sleep closures.  When a $key => value argument is
  passed to a sleep closure the value will be installed into the local scope of
  the function as variable $key.  This breaks the old behavior which was to 
  convert the key/value pair into a string i.e. $key=value
- improved function call traceing to detect when a function call failed and to
  indicate that such an event occured.
- coroutines are now allowed to call themselves in a recursive manner
- when yield is called, the local variable state is preserved until the 
  coroutine is called again (only when the coroutine is reset, i.e. exited w/o
  a yield is the local variable state dropped).
- added an error check for attempts to pack odd length hex strings
- parser now throws an error if a jar file specified with import * from: is not